# hue-gateway

./: .dockerignore  .gitignore  Dockerfile  MIGRATION.md  Makefile  README.md  docker-compose.yml  hue.md  openapi.json  plan.md  pyproject.toml  research.md  spec.md  task.md
docs/: index.html
docs/change_requests/: hue-gateway-api-architecture-0v9.md  hue-gateway-api-architecture-0v91.md
docs/spec/v2/: README.md  openapi.yaml  semantic.md
scripts/: docker-clean-hue-gateway.sh  hue-gateway-ops.sh  v2-e2e.sh
src/hue_gateway/: __main__.py  actions.py  app.py  cache.py  config.py  db.py  discover_tool.py  event_hub.py  hue_client.py  hue_sync.py  openapi_custom.py  pair_tool.py  rate_limit.py  schemas.py  security.py
src/hue_gateway/v2/: __init__.py  dispatcher.py  error_registry.py  event_bus.py  event_forwarder.py  idempotency.py  router.py  schemas.py  security.py
tests/: conftest.py  test_actions_clipv2_request.py  test_actions_pairing.py  test_discovery_tool_parsing.py  test_hue_client.py  test_name_resolution_and_actions.py  test_v1_regression_guards.py  test_v2_batch.py  test_v2_canonical_errors.py  test_v2_idempotency.py  test_v2_inventory_mapping.py  test_v2_sse.py
