[project]
name = "hue-gateway"
version = "0.1.0"
description = "Dockerized Hue Gateway API for agentic skill control (LAN-only)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "pydantic>=2.7",
]

[project.scripts]
hue-gateway-pair = "hue_gateway.pair_tool:main"
hue-gateway-discover = "hue_gateway.discover_tool:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
discovery = [
  "zeroconf>=0.132",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
